[gd_scene load_steps=5 format=2]

[ext_resource path="res://Jugador/JugadorClase.tscn" type="PackedScene" id=1]
[ext_resource path="res://JugadorClase.gd" type="Script" id=2]
[ext_resource path="res://Jugador/ControlCamara.gd" type="Script" id=3]

[sub_resource type="CapsuleShape" id=1]
radius = 2.0
height = 4.0

[node name="JugadorClase" type="KinematicBody"]
script = ExtResource( 2 )

[node name="Animated_Human" parent="." instance=ExtResource( 1 )]

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 2, 0 )
shape = SubResource( 1 )

[node name="ControlCamara" type="Spatial" parent="."]
script = ExtResource( 3 )

[node name="ControlHorizontal" type="Spatial" parent="ControlCamara"]

[node name="ControlVertical" type="Spatial" parent="ControlCamara/ControlHorizontal"]

[node name="Camara" type="ClippedCamera" parent="ControlCamara/ControlHorizontal/ControlVertical"]
transform = Transform( -0.999891, 0, 0.0147648, 0, 1, 0, -0.0147648, 0, -0.999891, 0, 4.88309, -4.21846 )

[node name="Frente" type="Position3D" parent="ControlCamara/ControlHorizontal/ControlVertical"]
transform = Transform( -1.62921e-07, 0, -1, 0, 1, 0, 1, 0, -1.62921e-07, -0.0426564, 3.48007, 1.82652 )
